fixed GitHub page visibility

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -20,7 +20,7 @@ body {
     width: 360px;
     overflow: hidden;
 
-    background-image: url(./img/hero/hero_mobile1.PNG);
+    background-image: url(../img/photo/hero/hero_mobile1.png);
     background-repeat: no-repeat;
 
     position: relative;
